Fix skipnav visibility and only give content tabindex before focus.

--- a/scss/_omeka.scss
+++ b/scss/_omeka.scss
@@ -43,7 +43,12 @@ select {
 }
 
 #skipnav {
-  @include element-invisible;
+  @extend .show-on-focus;
+}
+
+#skipnav {
+  text-align: center;
+  display: block;
 }
 
 #content {
